[tool.poetry]
name = "diceware"
version = "0.1.0"
description = "Generate secure passphrases by rolling dice on the terminal, using the EFF's wordlist."
authors = ["\"josfam\" <\"josephamukun@tutanota.com\">"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
rich = "^13.4.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
